# ai-text-summarizer

./: main.py  prompt2.txt  pyproject.toml  scrap.py
