[tool.poetry]
name = "ai-text-summarizer"
version = "0.1.0"
description = "AI-powered text summarizer"
authors = ["Tam Le <tamsgit@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
urllib3 = "^1.26.12"
openai = "0.27.4"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"